fixed overflow issue

--- a/web/themes/custom/tigris/assets/scss/base/_normalize.scss
+++ b/web/themes/custom/tigris/assets/scss/base/_normalize.scss
@@ -7,6 +7,9 @@ body {
   overflow-y: scroll;
   height: 100%;
   width: 100%;
+  > div {
+    overflow-x: hidden;
+  }
 }
 main {
   min-height: 80vh;
