--- a/web/themes/custom/tigris/assets/scss/component/_block.scss
+++ b/web/themes/custom/tigris/assets/scss/component/_block.scss
@@ -4,10 +4,14 @@
     //margin: $spacing;
   }
   &.block--type-introduction-cta {
-    max-width: 800px;
+    width: 800px;
+    max-width: 100%;
     min-height: 300px;
     display: flex;
     flex-flow: row wrap;
+    @media(max-width: 330px) {
+      flex-flow: column;
+    }
     .field {
       flex: 1 1 100%;
     }
@@ -15,6 +19,13 @@
       .field__items {
         display: flex;
         align-items: center;
+        @media(max-width: 330px) {
+          flex-flow: column;
+          align-items: flex-start;
+          > .field__item {
+            margin: 10px 0;
+          }
+        }
         .field__item {
           &:first-child {
             margin-right: $spacing;
